test/fail/vt_tree01.v3
//@execute 0=true; 1=false; 2=false; 3=false; 4=false
type Tree<T> {
	case Leaf(val: T);
	case Node(left: Tree<T>, right: Tree<T>);
}
def l = Tree.Leaf(6);
def r = Tree.Leaf(7);
def main(a: int) -> bool {
	var x: Tree<int>;
	if (a == 0) x = l;
	if (a == 1) x = r;
	if (a == 2) x = Tree.Node(l, r);
	return l == x;
}
